# SamplePlugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  setup.bat
extrans/: CMakeLists.txt  Main.cpp  README.md  mosaic.cpp  ripple.cpp  rotatebase.cpp  rotatetrans.cpp  turn.cpp  wave.cpp
